# hypersnap

./: Cargo.toml  Dockerfile  README.md  docker-compose.mainnet.yml  docker-compose.nightly.yml  validators.toml
.github/workflows/: verify.yml
config/: sample.toml
contracts/: .gitignore  README.md  foundry.toml
contracts/deployer-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
contracts/script/: Deploy.s.sol
contracts/src/: HypersnapBridge.sol
contracts/test/: Bootstrap.t.sol  Burn.t.sol  Claim.t.sol  CrossSideDigests.t.sol  DeployDeterministic.t.sol  ImplLockdown.t.sol  Initialize.t.sol  Invariants.t.sol  MerkleHelper.t.sol  Pause.t.sol  Permit.t.sol  RecoverERC20.t.sol  RotateOwner.t.sol  UpgradeFlow.t.sol
crates/ed448-bulletproofs/: build.rs
crates/hypersnap-bridge-ceremony/: Cargo.toml  README.md
crates/hypersnap-bridge-ceremony/src/: calldata.rs  main.rs  types.rs
crates/hypersnap-crypto/: Cargo.toml
crates/hypersnap-crypto/src/: bls.rs  bridge_payload.rs  bridge_state.rs  dkls_ceremony.rs  dkls_sign.rs  dkls_threshold.rs  ecdsa.rs  kzg.rs  kzg_lagrange.rs  kzg_loader.rs  lib.rs  merkle.rs  tokens.rs  transport_encrypt.rs  verkle.rs
crates/proof-of-quality/: Cargo.toml
crates/proof-of-quality/src/: app_pow.rs  da_pow.rs  eligibility.rs  fees.rs  lib.rs  metrics.rs  reader.rs  scoring.rs  uniqueness.rs
docs/: endpoint-proposal-audit.md  operator-runbook.md  tokenomics-pow.md
grafana/: grafana-dashboard.json
proto/: Cargo.toml  build.rs
proto/definitions/: blocks.proto  gossip.proto  hyper.proto  request_response.proto  rpc.proto
proto/src/: lib.rs
scripts/: hypersnap.sh  test-v2-api.sh
site/: vocs.config.tsx
src/: cfg.rs  lib.rs  main.rs
src/api/: config.rs  feeds.rs  http.rs  mod.rs  social_graph.rs  types.rs  user_hydrator.rs
src/consensus/: consensus.rs  hyper_proposer.rs  mod.rs  read_validator.rs  read_validator_test.rs  validator.rs
src/core/: message.rs  types.rs
src/emission/: compute.rs  eigentrust.rs  mod.rs  mutuality.rs  params.rs  schedule.rs
tests/: client_parity_test.rs  consensus_test.rs
(+164 files in other folders)
