[package]
name = "hypersnap-bridge-ceremony"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[[bin]]
name = "bridge-ceremony"
path = "src/main.rs"

[dependencies]
hypersnap-crypto = { path = "../hypersnap-crypto" }
alloy-primitives = "0.8.14"
alloy-sol-types = { version = "0.8.15", features = ["json"] }
alloy-signer = "0.8.0"
alloy-signer-local = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
hex = "0.4"
anyhow = "1.0"
rpassword = "7"
